[package]
name = "tips"
version = "0.1.0"
authors = ["Walther <veeti.haapsamo@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "TIP: you can get tips while using cargo and rust!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
rand = "0.7.3"
